dog/tok/CT.rl.c

#line 1 "CT.c.rl"
#include "abc/INT.h"
#include "abc/PRO.h"
#include "CT.h"

// user functions (callbacks) for the parser
ok64 CTonComment (u8cs tok, CTstate* state);
ok64 CTonString (u8cs tok, CTstate* state);
ok64 CTonNumber (u8cs tok, CTstate* state);
ok64 CTonPreproc (u8cs tok, CTstate* state);
ok64 CTonWord (u8cs tok, CTstate* state);
ok64 CTonPunct (u8cs tok, CTstate* state);
ok64 CTonSpace (u8cs tok, CTstate* state);


#line 151 "CT.c.rl"



#line 17 "CT.rl.c"
static const int CT_start = 41;
static const int CT_first_final = 41;
static const int CT_error = 0;

static const int CT_en_main = 41;


#line 154 "CT.c.rl"

// the public API function
ok64 CTLexer(CTstate* state) {

    a_dup(u8c, data, state->data);
    sane($ok(data));

    int cs = 0;
    int act = 0;
    u8c *p = (u8c*) data[0];
    u8c *pe = (u8c*) data[1];
    u8c *eof = pe;
    u8c *ts = NULL;
    u8c *te = NULL;
    ok64 o = OK;

    u8cs tok = {p, p};

    
#line 41 "CT.rl.c"
	{
	cs = CT_start;
	ts = 0;
	te = 0;
	act = 0;
	}

#line 173 "CT.c.rl"
    
#line 47 "CT.rl.c"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
tr0:
#line 1 "NONE"
	{	switch( act ) {
	case 0:
	{{goto st0;}}
	break;
	case 5:
	{{p = ((te))-1;}
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonNumber(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}
	break;
	case 6:
	{{p = ((te))-1;}
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonNumber(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}
	break;
	case 7:
	{{p = ((te))-1;}
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonNumber(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}
	break;
	case 8:
	{{p = ((te))-1;}
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonNumber(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}
	break;
	case 11:
	{{p = ((te))-1;}
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonNumber(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}
	break;
	case 12:
	{{p = ((te))-1;}
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonNumber(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}
	break;
	case 13:
	{{p = ((te))-1;}
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonPreproc(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}
	break;
	case 14:
	{{p = ((te))-1;}
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonPreproc(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}
	break;
	case 16:
	{{p = ((te))-1;}
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonWord(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}
	break;
	case 17:
	{{p = ((te))-1;}
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonPunct(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}
	break;
	case 18:
	{{p = ((te))-1;}
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonPunct(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}
	break;
	}
	}
	goto st41;
tr2:
#line 44 "CT.c.rl"
	{te = p+1;{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonString(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr12:
#line 68 "CT.c.rl"
	{{p = ((te))-1;}{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonPunct(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr23:
#line 44 "CT.c.rl"
	{te = p+1;{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonString(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr33:
#line 68 "CT.c.rl"
	{{p = ((te))-1;}{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonPunct(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr34:
#line 68 "CT.c.rl"
	{te = p+1;{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonPunct(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr35:
#line 50 "CT.c.rl"
	{{p = ((te))-1;}{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonNumber(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr39:
#line 68 "CT.c.rl"
	{{p = ((te))-1;}{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonPunct(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr42:
#line 38 "CT.c.rl"
	{te = p+1;{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonComment(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr44:
#line 50 "CT.c.rl"
	{{p = ((te))-1;}{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonNumber(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr52:
#line 50 "CT.c.rl"
	{{p = ((te))-1;}{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonNumber(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr58:
#line 68 "CT.c.rl"
	{te = p+1;{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonPunct(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr74:
#line 74 "CT.c.rl"
	{te = p;p--;{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonSpace(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr75:
#line 68 "CT.c.rl"
	{te = p;p--;{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonPunct(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr76:
#line 56 "CT.c.rl"
	{te = p;p--;{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonPreproc(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr90:
#line 56 "CT.c.rl"
	{te = p;p--;{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonPreproc(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr105:
#line 62 "CT.c.rl"
	{te = p;p--;{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonWord(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr106:
#line 68 "CT.c.rl"
	{te = p;p--;{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonPunct(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr107:
#line 68 "CT.c.rl"
	{te = p;p--;{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonPunct(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr109:
#line 50 "CT.c.rl"
	{te = p;p--;{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonNumber(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr111:
#line 50 "CT.c.rl"
	{te = p+1;{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonNumber(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr114:
#line 38 "CT.c.rl"
	{te = p;p--;{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonComment(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr115:
#line 50 "CT.c.rl"
	{te = p;p--;{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonNumber(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr124:
#line 50 "CT.c.rl"
	{te = p;p--;{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonNumber(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr125:
#line 50 "CT.c.rl"
	{te = p+1;{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonNumber(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr128:
#line 50 "CT.c.rl"
	{te = p;p--;{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonNumber(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr129:
#line 50 "CT.c.rl"
	{te = p+1;{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonNumber(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr131:
#line 50 "CT.c.rl"
	{te = p+1;{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonNumber(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr133:
#line 50 "CT.c.rl"
	{te = p;p--;{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonNumber(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr137:
#line 50 "CT.c.rl"
	{te = p+1;{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonNumber(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr139:
#line 50 "CT.c.rl"
	{te = p;p--;{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonNumber(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr143:
#line 50 "CT.c.rl"
	{te = p+1;{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonNumber(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr145:
#line 50 "CT.c.rl"
	{te = p;p--;{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonNumber(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr149:
#line 50 "CT.c.rl"
	{te = p;p--;{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonNumber(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr150:
#line 50 "CT.c.rl"
	{te = p+1;{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonNumber(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
tr152:
#line 50 "CT.c.rl"
	{te = p+1;{
    tok[0] = (u8c*)ts;
    tok[1] = (u8c*)te;
    o = CTonNumber(tok, state);
    if (o!=OK) {p++; cs = 41; goto _out;}
}}
	goto st41;
st41:
#line 1 "NONE"
	{ts = 0;}
#line 1 "NONE"
	{act = 0;}
	if ( ++p == pe )
		goto _test_eof41;
case 41:
#line 1 "NONE"
	{ts = p;}
#line 435 "CT.rl.c"
	switch( (*p) ) {
		case 32u: goto st42;
		case 34u: goto st1;
		case 35u: goto tr61;
		case 36u: goto st79;
		case 38u: goto st80;
		case 39u: goto st12;
		case 42u: goto tr60;
		case 43u: goto st81;
		case 45u: goto st82;
		case 46u: goto tr66;
		case 47u: goto tr67;
		case 48u: goto tr68;
		case 60u: goto st114;
		case 61u: goto tr60;
		case 62u: goto st115;
		case 76u: goto tr71;
		case 85u: goto tr71;
		case 94u: goto tr60;
		case 95u: goto st79;
		case 117u: goto tr72;
		case 124u: goto st118;
	}
	if ( (*p) < 49u ) {
		if ( (*p) > 13u ) {
			if ( 33u <= (*p) && (*p) <= 37u )
				goto tr60;
		} else if ( (*p) >= 9u )
			goto st42;
	} else if ( (*p) > 57u ) {
		if ( (*p) > 90u ) {
			if ( 97u <= (*p) && (*p) <= 122u )
				goto st79;
		} else if ( (*p) >= 65u )
			goto st79;
	} else
		goto tr43;
	goto tr58;
st42:
	if ( ++p == pe )
		goto _test_eof42;
case 42:
	if ( (*p) == 32u )
		goto st42;
	if ( 9u <= (*p) && (*p) <= 13u )
		goto st42;
	goto tr74;
tr60:
#line 1 "NONE"
	{te = p+1;}
#line 68 "CT.c.rl"
	{act = 18;}
	goto st43;
tr154:
#line 1 "NONE"
	{te = p+1;}
#line 68 "CT.c.rl"
	{act = 17;}
	goto st43;
st43:
	if ( ++p == pe )
		goto _test_eof43;
case 43:
#line 494 "CT.rl.c"
	if ( (*p) == 61u )
		goto tr34;
	goto tr0;
st1:
	if ( ++p == pe )
		goto _test_eof1;
case 1:
	switch( (*p) ) {
		case 34u: goto tr2;
		case 92u: goto st2;
	}
	goto st1;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	switch( (*p) ) {
		case 34u: goto st1;
		case 39u: goto st1;
		case 63u: goto st1;
		case 85u: goto st3;
		case 92u: goto st1;
		case 110u: goto st1;
		case 114u: goto st1;
		case 117u: goto st7;
		case 120u: goto st10;
	}
	if ( (*p) < 97u ) {
		if ( 48u <= (*p) && (*p) <= 55u )
			goto st1;
	} else if ( (*p) > 98u ) {
		if ( (*p) > 102u ) {
			if ( 116u <= (*p) && (*p) <= 118u )
				goto st1;
		} else if ( (*p) >= 101u )
			goto st1;
	} else
		goto st1;
	goto tr0;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto st4;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st4;
	} else
		goto st4;
	goto tr0;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto st5;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st5;
	} else
		goto st5;
	goto tr0;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto st6;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st6;
	} else
		goto st6;
	goto tr0;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto st7;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st7;
	} else
		goto st7;
	goto tr0;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto st8;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st8;
	} else
		goto st8;
	goto tr0;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto st9;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st9;
	} else
		goto st9;
	goto tr0;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto st10;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st10;
	} else
		goto st10;
	goto tr0;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto st1;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st1;
	} else
		goto st1;
	goto tr0;
tr61:
#line 1 "NONE"
	{te = p+1;}
	goto st44;
st44:
	if ( ++p == pe )
		goto _test_eof44;
case 44:
#line 644 "CT.rl.c"
	switch( (*p) ) {
		case 9u: goto st11;
		case 32u: goto st11;
		case 36u: goto tr14;
		case 95u: goto tr14;
		case 100u: goto st46;
		case 101u: goto st51;
		case 105u: goto st59;
		case 108u: goto st48;
		case 112u: goto st67;
		case 117u: goto st72;
		case 119u: goto st73;
	}
	if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr14;
	} else if ( (*p) >= 65u )
		goto tr14;
	goto tr75;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
	switch( (*p) ) {
		case 9u: goto st11;
		case 32u: goto st11;
		case 36u: goto tr14;
		case 95u: goto tr14;
		case 100u: goto st46;
		case 101u: goto st51;
		case 105u: goto st59;
		case 108u: goto st48;
		case 112u: goto st67;
		case 117u: goto st72;
		case 119u: goto st73;
	}
	if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr14;
	} else if ( (*p) >= 65u )
		goto tr14;
	goto tr12;
tr14:
#line 1 "NONE"
	{te = p+1;}
#line 56 "CT.c.rl"
	{act = 14;}
	goto st45;
tr80:
#line 1 "NONE"
	{te = p+1;}
#line 56 "CT.c.rl"
	{act = 13;}
	goto st45;
st45:
	if ( ++p == pe )
		goto _test_eof45;
case 45:
#line 698 "CT.rl.c"
	switch( (*p) ) {
		case 36u: goto tr14;
		case 95u: goto tr14;
	}
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr14;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr14;
	} else
		goto tr14;
	goto tr0;
st46:
	if ( ++p == pe )
		goto _test_eof46;
case 46:
	switch( (*p) ) {
		case 36u: goto tr14;
		case 95u: goto tr14;
		case 101u: goto st47;
	}
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr14;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr14;
	} else
		goto tr14;
	goto tr76;
st47:
	if ( ++p == pe )
		goto _test_eof47;
case 47:
	switch( (*p) ) {
		case 36u: goto tr14;
		case 95u: goto tr14;
		case 102u: goto st48;
	}
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr14;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr14;
	} else
		goto tr14;
	goto tr76;
st48:
	if ( ++p == pe )
		goto _test_eof48;
case 48:
	switch( (*p) ) {
		case 36u: goto tr14;
		case 95u: goto tr14;
		case 105u: goto st49;
	}
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr14;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr14;
	} else
		goto tr14;
	goto tr76;
st49:
	if ( ++p == pe )
		goto _test_eof49;
case 49:
	switch( (*p) ) {
		case 36u: goto tr14;
		case 95u: goto tr14;
		case 110u: goto st50;
	}
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr14;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr14;
	} else
		goto tr14;
	goto tr76;
st50:
	if ( ++p == pe )
		goto _test_eof50;
case 50:
	switch( (*p) ) {
		case 36u: goto tr14;
		case 95u: goto tr14;
		case 101u: goto tr80;
	}
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr14;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr14;
	} else
		goto tr14;
	goto tr76;
st51:
	if ( ++p == pe )
		goto _test_eof51;
case 51:
	switch( (*p) ) {
		case 36u: goto tr14;
		case 95u: goto tr14;
		case 108u: goto st52;
		case 110u: goto st54;
		case 114u: goto st56;
	}
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr14;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr14;
	} else
		goto tr14;
	goto tr76;
st52:
	if ( ++p == pe )
		goto _test_eof52;
case 52:
	switch( (*p) ) {
		case 36u: goto tr14;
		case 95u: goto tr14;
		case 105u: goto st53;
		case 115u: goto st50;
	}
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr14;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr14;
	} else
		goto tr14;
	goto tr76;
st53:
	if ( ++p == pe )
		goto _test_eof53;
case 53:
	switch( (*p) ) {
		case 36u: goto tr14;
		case 95u: goto tr14;
		case 102u: goto tr80;
	}
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr14;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr14;
	} else
		goto tr14;
	goto tr76;
st54:
	if ( ++p == pe )
		goto _test_eof54;
case 54:
	switch( (*p) ) {
		case 36u: goto tr14;
		case 95u: goto tr14;
		case 100u: goto st55;
	}
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr14;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr14;
	} else
		goto tr14;
	goto tr76;
st55:
	if ( ++p == pe )
		goto _test_eof55;
case 55:
	switch( (*p) ) {
		case 36u: goto tr14;
		case 95u: goto tr14;
		case 105u: goto st53;
	}
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr14;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr14;
	} else
		goto tr14;
	goto tr76;
st56:
	if ( ++p == pe )
		goto _test_eof56;
case 56:
	switch( (*p) ) {
		case 36u: goto tr14;
		case 95u: goto tr14;
		case 114u: goto st57;
	}
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr14;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr14;
	} else
		goto tr14;
	goto tr76;
st57:
	if ( ++p == pe )
		goto _test_eof57;
case 57:
	switch( (*p) ) {
		case 36u: goto tr14;
		case 95u: goto tr14;
		case 111u: goto st58;
	}
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr14;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr14;
	} else
		goto tr14;
	goto tr76;
st58:
	if ( ++p == pe )
		goto _test_eof58;
case 58:
	switch( (*p) ) {
		case 36u: goto tr14;
		case 95u: goto tr14;
		case 114u: goto tr80;
	}
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr14;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr14;
	} else
		goto tr14;
	goto tr76;
st59:
	if ( ++p == pe )
		goto _test_eof59;
case 59:
	switch( (*p) ) {
		case 36u: goto tr14;
		case 95u: goto tr14;
		case 102u: goto st60;
		case 110u: goto st63;
	}
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr14;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr14;
	} else
		goto tr14;
	goto tr76;
st60:
	if ( ++p == pe )
		goto _test_eof60;
case 60:
	switch( (*p) ) {
		case 36u: goto tr14;
		case 95u: goto tr14;
		case 100u: goto st61;
		case 110u: goto st62;
	}
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr14;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr14;
	} else
		goto tr14;
	goto tr90;
st61:
	if ( ++p == pe )
		goto _test_eof61;
case 61:
	switch( (*p) ) {
		case 36u: goto tr14;
		case 95u: goto tr14;
		case 101u: goto st53;
	}
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr14;
